New version 5Oct-9am. npm not started

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -12,7 +12,7 @@
 
     <div class="bg-black-0"> <!-- Remove the black shading over image -->
 
-      <div class="bg-yellow">
+      <div class="bg-grey">
     {{ partial "site-navigation.html"  .}}  
      </div>
 
