--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -3,9 +3,12 @@
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
   {{ $featured_image := (trim $featured_image "/") | absURL }}
   <header class="cover bg-top" style="background-image: url('{{ $featured_image }}');">
-     <div class="eckimg"><img src="images/1023.png" /></div>
+
+     <!-- Commented out RLM 5Oct div class="eckimg"><img src="images/1023.png" /> ((/partials/page-header.html))</div  The EK symbol is in site-header.html -->
+
     <div class="pb2-m pb6-l bg-black-60">
       {{ partial "site-navigation.html" . }}
+
       <div class="tc-l pv6 ph3 ph4-ns">
         <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">{{ .Title | default .Site.Title }}</h1>
         {{ with .Params.description  }}
@@ -15,6 +18,7 @@
         {{ end }}
       </div>
     </div>
+    
   </header>
 {{ else }}
   <header>
