--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -8,7 +8,19 @@
   <header class="cover bg-top" style="background-image: url('{{ $featured_image }}'); ">
     <!-- Set height of header background   image so it doesnt push info down the page -->
 
-    <div class="eckimg"><img src="images/1023.png" /></div>
+
+  <div class="flex-l justify-between items-center center">
+    <a href="{{ .Site.BaseURL }}" class="f3 fw2 hover-white no-underline white-90 dib ml5 mr2"> <!-- ml2 moves the title away from the EK symbol, mr2 sets a gap on the right of the title -->
+      {{ .Site.Title }}  <!-- This ithe site title -->
+    </a>
+</div>
+
+
+
+    
+
+    <div class="eckimg pl2 pt2 "><img src="images/1023.png" />  </div>
+
 
     <div class="bg-black-0"> <!-- Remove the black shading over image -->
 
