--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,11 +1,7 @@
 <div class="mynav">
 <nav class="pv3 ph3 ph4-ns" role="navigation">
 
-  <div class="flex-l justify-between items-center center">
-    <a href="{{ .Site.BaseURL }}" class="f3 fw2 hover-white no-underline white-90 dib ml2 mr2"> <!-- ml2 moves the title away from the EK symbol, mr2 sets a gap on the right of the title -->
-      {{ .Site.Title }}
-    </a>
-</div>
+<!-- moved the site title to the site header -->
 
     <div class="flex-l items-center">
       {{ if .Site.Menus.main }}
