--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -5,10 +5,11 @@
 <p class="pl4 pr4 black-50">	{{ partial "disclaimer.html" .}}</p>
 
   <div class="flex justify-between">
-	  <!-- p class="f5 fw5 black-50  no-underline  dn dib-ns pv2 ph2" >
-	    &copy; {{ now.Format "2006" }} {{ .Site.Title }}
-	  </p  commented out as not necessary RLM-->
+	  <p class="f5 fw5 black-80  no-underline  dn dib-ns pv2 ph2" >
+	    
+	  </p>
+	   
 </div>
-
+	 
 </footer>
  
