--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -16,12 +16,12 @@
 
 
   <div class="sitetitle">
-    <a href="{{ .Site.BaseURL }}" class="f3 fw2 hover-white no-underline white-90"> 
+    <a href="{{ .Site.BaseURL }}" class="f3 fw3 hover-white no-underline white-90"> 
       {{ .Site.Title }}  
     </a>
      </div>
 
-<div class="eckimg "><img src="images/1023.png" /> 
+<div class="eckimg "><img src="/images/1023.png" /> 
 </div>
 
 
@@ -35,7 +35,7 @@
      </div>
 
       <div class="tc-l pv4 pv5-l ph3 ph4-ns"> <!-- padding values -->
-        <h1 class="f2 f-subheadline-l fw2 white-90 mb0 mt0 lh-title"> <!-- f and fw font weight mt - margin-top -->
+        <h1 class="f2 f-subheadline-l fw2 black-70 mb0 mt0 lh-title"> <!-- f and fw font weight mt - margin-top -->
           {{ .Title | default .Site.Title }}
         </h1>
         {{ with .Params.description }}
