--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,6 +54,7 @@
     <main class="pb7" role="main">
       {{ block "main" . }}{{ end }}
     </main>
+    {{ block "social" .}}{{ partial "social-follow.html" .}} {{end}}
     {{ block "footer" . }}{{ partial "site-footer.html" . }}{{ end }}
     {{ block "scripts" . }}{{ partial "site-scripts.html" . }}{{ end }}
   </body>
