--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,6 +26,8 @@
     <main class="nested-copy-line-height lh-copy serif f4 nested-links nested-img mid-gray pr4-l w-two-thirds-l">
         {{- .Content -}}
       {{- partial "tags.html" . -}}
+
+      {{ partial "quotes" . }}
       <div class="mt6">
         {{ template "_internal/disqus.html" . }}
       </div>
