--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,4 +3,5 @@
 @import '_hugo-internal-templates';
 @import '_social-icons';
 @import '_styles'; 
+@import 'custom.css'
 /* you can create your own css files and import them here */
