--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,7 +1,7 @@
 <div class="mynav">
 <nav class="pv3 ph3 ph4-ns" role="navigation">
 
-<!-- moved the site title to the site header -->
+<!-- moved the site title to the site header RLM `-->
 
   <div class="flex-l justify-between items-center center ml4">
 
@@ -11,17 +11,22 @@
 
 <div class="navigation flex-l items-center pt5 pb-2">
       {{ if .Site.Menus.main }}
-        <ul class="pl0 mr3 ">
+       <ul class="pl0 mr3 ">
           {{ range .Site.Menus.main }}
-          <li class="list f5 f4-ns fw3  pr3 dib"><!-- ml2 sets gap between pararaphs  remove dib makes the list vertical -->
-            <a class="navs hover-white no-underline white-90 bg-white" href="{{ .URL }}" title="{{ .Name }} page">
-             <ul> <li class="navs"><a href="{{.URL}}">{{ .Name }}</a></li></ul>
-            </a>
+          <li class="list f5 f3-ns fw3  pr3 dib "><!-- ml2 sets gap between pararaphs  remove dib makes the list vertical -->
+            <!-- a class="navs hover-white no-underline white-90 bg-white" href="{{ .URL }}" title="{{ .Name }} page">
+             <ul> <li class="navs"> </a -->
+
+              <a href="{{.URL}}"> {{if ne .Name "Quotes" }}  {{ .Name }}</a>
+          </li> {{ end }}
+             </a></li>
+        </ul> <!-- /a Remove the commented /a  above to reinstate dots -->
+
           </li>
           {{ end }}
         </ul>
       {{ end }} 
-      {{/* partial "social-follow.html" . */}}
+      {{ partial "social-follow.html" . }}
     </div>
   </div>
 </nav>
